@@ -58,7 +58,7 @@ public abstract class Context {
 
   /**
    * An object stored in 'solrcore' scope is available across imports, entities and documents throughout the life of
-   * a solr core. A solr core unload or reload will destroy this data. 
+   * a solr core. A solr core unload or reload will destroy this data.
    */
   public static final String SCOPE_SOLR_CORE = "solrcore";
 
@@ -102,7 +102,7 @@ public abstract class Context {
   /**
    * Gets a new DataSource instance with a name. Ensure that you close() this after use
    * because this is created just for this method call.
-   *  
+   *
    * @param name Name of the dataSource as defined in the dataSource tag
    * @return a new DataSource instance
    * @see org.apache.solr.handler.dataimport.DataSource
@@ -172,4 +172,12 @@ public abstract class Context {
    * @return the core
    */
   public abstract SolrCore getSolrCore();
+
+  /**
+   * Makes available some basic running statistics such as "docCount",
+   * "deletedDocCount", "rowCount", "queryCount" and "skipDocCount"
+   *
+   * @return a Map containing running statistics of the current import
+   */
+  public abstract Map<String, Object> getStats();
 }
